--- a/client/static/global.css
+++ b/client/static/global.css
@@ -15,3 +15,41 @@
   --green--on-light: rgba(15, 154, 104, 1);
   --yellow--on-dark: rgba(254, 198, 29, 1);
 }
+
+*[data-visually-hidden] {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+[data-description] {
+  line-height: 1.5;
+}
+
+[data-description] h2 {
+  margin-top: 1rem;
+
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+[data-description] h3 {
+  margin-top: 0.5rem;
+
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+[data-description] ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-block: 0.5rem;
+  padding-left: 1rem;
+
+  list-style: square;
+}
